--- a/snake.yml
+++ b/snake.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 */12 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -12,8 +15,8 @@ jobs:
       - uses: Platane/snk@v3
         with:
           github_user_name: alfanassyura14
-          outputs: |
-            dist/snake.svg
+          outputs: dist/snake.svg
+
       - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
