--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -11,8 +11,11 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: abozanona/pacman-contribution-graph@v1
+      - uses: actions/checkout@v3
+
+      - uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: alfanassyura14
 
