Add dark theme to pacman contribution graph

--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: alfanassyura14
+          theme: dark
 
       - uses: crazy-max/ghaction-github-pages@v3
         with:
